--- a/editor.html
+++ b/editor.html
@@ -7,7 +7,7 @@
     <script src="editCards.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="navEditor"><a href="/index.html">Show Cards</a></div>
+    <div class="navEditor"><a href="./index.html">Show Cards</a></div>
     <div class="saveChanges"><input type="button" onclick="save()" value="Save Changes"></div>
     <div class="newCard"><textarea id="newCardText" rows="4" cols="25"></textarea><br><input type="button" value="Add Card" onclick="newCard()"></div>
     <table id="cardTable">
