--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="cardView.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="navEditor"><a href="/editor.html">Editor</a></div>
+    <div class="navEditor"><a href="./editor.html">Editor</a></div>
     <div id="nextCard"><a href="#" onclick="nextCard()">Next Card</a></div>
     <div id="prevCard"><a href="#" onclick="prevCard()">Prev. Card</a></div>
     <div id="cardContent"></div>
