Added Work in progress notes

--- a/editor.html
+++ b/editor.html
@@ -13,5 +13,7 @@
     <table id="cardTable">
 
     </table>
+
+    <<footer>This page is still under construction. Everything is functional however the page needs to be styled</footer>
   </body>
 </html>
