--- a/editor.html
+++ b/editor.html
@@ -14,6 +14,6 @@
 
     </table>
 
-    <<footer>This page is still under construction. Everything is functional however the page needs to be styled</footer>
+    <footer style="bottom: 2%">This page is still under construction. Everything is functional however the page needs to be styled</footer>
   </body>
 </html>
