--- a/editor.html
+++ b/editor.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="veiwport" content="width=device-width, initial-scale=1.0>
+    
+
     <title>Communication Cards Online - Editor</title>
     <script src="jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="editCards.js" charset="utf-8"></script>
