--- a/editor.html
+++ b/editor.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="veiwport" content="width=device-width, initial-scale=1.0>
+    <meta name="veiwport" content="width=device-width, initial-scale=1.0">
     
 
     <title>Communication Cards Online - Editor</title>
