--- a/editor.html
+++ b/editor.html
@@ -6,6 +6,7 @@
     <title>Communication Cards Online - Editor</title>
     <script src="jquery-3.3.1.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="defaultCards.js" charset="utf-8"></script>
     <script src="editCards.js" charset="utf-8"></script>
   </head>
   <body>
