--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Communication Cards Online</title>
     <script src="jquery-3.3.1.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="defaultCards.js" charset="utf-8"></script>
     <script src="cardView.js" charset="utf-8"></script>
   </head>
   <body>
